--- a/pewds.html
+++ b/pewds.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
     <title>Pewdiepie vs T-series</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="pewds.css" />
@@ -11,15 +14,17 @@
 
 <body>
     <!-- navigation -->
+
     <nav>
         <ul>
-            <li> <a href="#">home</a></li>
-            <li><a href="#">PEWds</a> </li>
-            <li><a href="#">idk yet</a> </li>
-            <li><a href="#">enough?</a> </li>
+            <li> <a href="#">0 deaths</a></li>
+            <li><a href="#">Do your part</a> </li>
+            <li><a href="#">Pewdiepie</a> </li>
+            <li><a href="#">Memes</a> </li>
         </ul>
     </nav>
-
+<!-- 
+<a href="#" id="menu-btn">Menu</a> -->
 
 
     <div class="container">
