--- a/pewds.html
+++ b/pewds.html
@@ -30,7 +30,7 @@
     <div class="container">
         <!-- banner image -->
     <figure>
-        <img src="#">
+        <img src="">
     </figure>
 
         <section>
