made some changes
- print page layout
- added live sub count to pewds page

--- a/pewds.html
+++ b/pewds.html
@@ -30,8 +30,13 @@
     <div class="container">
         <!-- banner image -->
     <figure>
-        <img src="">
+        <img src="#">
     </figure>
+
+    <iframe src="https://youcount.github.io/e/#!/PewDiePie" height="100" width="250" frameborder="0"></iframe>
+    <iframe src="https://youcount.github.io/e/#!/tseries" height="100" width="250" frameborder="0"></iframe>
+
+
 
         <section>
             <h3>A title for this shit</h3>
