--- a/printer.html
+++ b/printer.html
@@ -8,7 +8,8 @@
       <link rel="stylesheet" href="print.css">
 </head>
 <body>
-      <div class="container">
+            <div class="container-main">
+
             <nav>
                   <input type="checkbox" id="nav" class="hidden">
                   <label for="nav" class="nav-btn">
@@ -28,22 +29,45 @@
                         </ul>
                   </div>
             </nav>
-<section>
 
-        <div id="maintext">
+
+<section id="maintext">
             <h1>
                 We care about your security
             </h1>
-
             <p>something about security and how we care and why lmao</p>
-
-        </div>
-
-            <figure>
-                <img id="home" src="undraw_programmer_imem.png">
-            </figure>
 </section>
+<section id="mainpic">
+<figure>
+      <img id="home" src="undraw_programmer_imem.png">
+</figure>
+</section>
+</div>
 
+      <div class="content">
+<section id="firstbox">
+      <figure class="info">
+            <img src="#">
+      </figure>
+      <p>some information about what the fuck ye</p>
+</section>
+<section id="secondbox">
+      <figure class="info">
+            <img src="#">
+      </figure>
+      <p>some information about what the fuck ye</p>
+</section>
+<section id="thirdbox">
+      <figure class="info">
+            <img src="#">
+      </figure>
+      <p>some information about what the fuck ye</p>
+</section>
       </div>
+
+
+      <footer>
+            @ me boi
+      </footer>
 </body>
 </html>
