--- a/printer.html
+++ b/printer.html
@@ -6,6 +6,8 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <title>Minimal Responsive Navigation | HTML & CSS</title>
       <link rel="stylesheet" href="print.css">
+      <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+
 </head>
 <body>
             <div class="container-main">
@@ -45,26 +47,41 @@
 </div>
 
       <div class="content">
-<section id="firstbox">
+<section class="informative" id="firstbox">
       <figure class="info">
-            <img src="#">
+            <img src="undraw_empty_xct9.png">
       </figure>
       <p>some information about what the fuck ye</p>
 </section>
-<section id="secondbox">
+<section class="informative" id="secondbox">
       <figure class="info">
-            <img src="#">
+            <img src="undraw_working_remotely_jh40.png">
       </figure>
       <p>some information about what the fuck ye</p>
 </section>
-<section id="thirdbox">
+<section class="informative" id="thirdbox">
       <figure class="info">
-            <img src="#">
+            <img src="undraw_photocopy_gj0t.png">
       </figure>
       <p>some information about what the fuck ye</p>
 </section>
       </div>
 
+
+      <div class="aboutus">
+            <section>
+                  <h2>A title</h2>
+                  <p>I dont yet know what will be here</p>
+            </section>
+
+            <figure>
+                  <img src="">
+            </figure>
+      </div>
+
+      <div class="download">
+            Download the software now
+      </div>
 
       <footer>
             @ me boi
