--- a/printer.html
+++ b/printer.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,82 +10,165 @@
       <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
 
 </head>
+
 <body>
-            <div class="container-main">
 
-            <nav>
-                  <input type="checkbox" id="nav" class="hidden">
-                  <label for="nav" class="nav-btn">
-                        <i></i>
-                        <i></i>
-                        <i></i>
-                  </label>
-                  <div class="logo">
-                        <a href="#">PRINT PROTECT</a>
+      <header>
+            <div class="container">
+                  <nav>
+                        <input type="checkbox" id="nav" class="hidden">
+                        <label for="nav" class="nav-btn">
+                              <i></i>
+                              <i></i>
+                              <i></i>
+                        </label>
+                        <div class="logo">
+                              <a href="#">PRINT PROTECT</a>
+                        </div>
+                        <div class="nav-wrapper">
+                              <ul>
+                                    <li class="active"><a href="#">Home</a></li>
+                                    <li><a href="#">Overview</a></li>
+                                    <li><a href="#">Prices</a></li>
+                                    <li><a href="#">Purchase</a></li>
+                              </ul>
+                        </div>
+                  </nav>
+            </div>
+      </header>
+
+      <div class="jumbotron">
+            <div class="container">
+                  <div class="jumbo-content">
+                        <strong>YES WE CAN</strong>
                   </div>
-                  <div class="nav-wrapper">
-                        <ul>
-                              <li><a href="#">Home</a></li>
-                              <li><a href="#">Overview</a></li>
-                              <li><a href="#">Prices</a></li>
-                              <li><a href="#">Purchase</a></li>
-                        </ul>
-                  </div>
-            </nav>
-
-
-<section id="maintext">
-            <h1>
-                We care about your security
-            </h1>
-            <p>something about security and how we care and why lmao</p>
-</section>
-<section id="mainpic">
-<figure>
-      <img id="home" src="undraw_programmer_imem.png">
-</figure>
-</section>
-</div>
-
-      <div class="content">
-<section class="informative" id="firstbox">
-      <figure class="info">
-            <img src="undraw_empty_xct9.png">
-      </figure>
-      <p>some information about what the fuck ye</p>
-</section>
-<section class="informative" id="secondbox">
-      <figure class="info">
-            <img src="undraw_working_remotely_jh40.png">
-      </figure>
-      <p>some information about what the fuck ye</p>
-</section>
-<section class="informative" id="thirdbox">
-      <figure class="info">
-            <img src="undraw_photocopy_gj0t.png">
-      </figure>
-      <p>some information about what the fuck ye</p>
-</section>
+            </div>
       </div>
 
+      <div id="page">
 
-      <div class="aboutus">
-            <section>
-                  <h2>A title</h2>
-                  <p>I dont yet know what will be here</p>
+
+            <section class="section_row_main">
+                  <div class="container">
+                        <div class="main">
+                              <h1>
+                                    We care about your security
+                              </h1>
+                              <p>something about security and how we care and why lmao</p>
+                        </div>
+                        <div class="side">
+                              <figure>
+                                    <img id="home" src="undraw_programmer_imem.png">
+                              </figure>
+                        </div>
+                  </div>
             </section>
 
-            <figure>
-                  <img src="">
-            </figure>
-      </div>
 
-      <div class="download">
-            Download the software now
+            <section class="section_row_1">
+                  <div class="container">
+                        <div class="informative" id="firstbox">
+                              <figure class="info">
+                                    <img src="undraw_empty_xct9.png">
+                              </figure>
+                              <h2>About Us</h2>
+                              <p>some information about what the fuck ye</p>
+                              <a href="#">Read more</a>
+                        </div>
+                        <div class="informative" id="secondbox">
+                              <figure class="info">
+                                    <img src="undraw_working_remotely_jh40.png">
+                              </figure>
+                              <h2>Contact us</h2>
+                              <p>some information about what the fuck ye</p>
+                              <a href="#">Read more</a>
+                        </div>
+                        <div class="informative" id="thirdbox">
+                              <figure class="info">
+                                    <img src="undraw_photocopy_gj0t.png">
+                              </figure>
+                              <h2>Software Information</h2>
+                              <p>some information about what the fuck ye</p>
+                              <a href="#">Read more</a>
+                        </div>
+                  </div>
+            </section>
+<!-- 
+            <div class="aboutus">
+                  <section>
+                        <h2>A title</h2>
+                        <p>I dont yet know what will be here</p>
+                  </section>
+
+                  <figure>
+                        <img src="">
+                  </figure>
+            </div>
+
+            <div class="download">
+                  Download the software now
+            </div>
       </div>
 
       <footer>
             @ me boi
-      </footer>
+      </footer> -->
+
+      <div class="jumbotron-fixed">
+            <div class="container">
+                  <div class="jubmotron-fixed-content">
+                        <h2>Click here to get in contact with us</h2>
+                        <a href="#">Click here please ;(</a>
+                  </div>
+            </div>
+      </div>
+
+      
+      <section class="section_row_main">
+                  <div class="container">
+                        <div class="main">
+                              <h1>
+                                    We care about your security
+                              </h1>
+                              <p>something about security and how we care and why lmao</p>
+                        </div>
+                        <div class="side">
+                              <figure>
+                                    <img id="home" src="undraw_programmer_imem.png">
+                              </figure>
+                        </div>
+                  </div>
+            </section>
+
+
+            <section class="section_row_1">
+                  <div class="container">
+                        <div class="informative" id="firstbox">
+                              <figure class="info">
+                                    <img src="undraw_empty_xct9.png">
+                              </figure>
+                              <h2>Title</h2>
+                              <p>some information about what the fuck ye</p>
+                              <a href="#">Read more</a>
+                        </div>
+                        <div class="informative" id="secondbox">
+                              <figure class="info">
+                                    <img src="undraw_working_remotely_jh40.png">
+                              </figure>
+                              <h2>Contact us</h2>
+                              <p>some information about what the fuck ye</p>
+                              <a href="#">Read more</a>
+                        </div>
+                        <div class="informative" id="thirdbox">
+                              <figure class="info">
+                                    <img src="undraw_photocopy_gj0t.png">
+                              </figure>
+                              <h2>Software Information</h2>
+                              <p>some information about what the fuck ye</p>
+                              <a href="#">Read more</a>
+                        </div>
+                  </div>
+            </section>
 </body>
+
 </html>
