added banner and small changes
sodjfjkshdf

--- a/pewds.html
+++ b/pewds.html
@@ -14,29 +14,37 @@
 
 <body>
     <!-- navigation -->
-
-    <nav>
-        <ul>
-            <li> <a href="#">0 deaths</a></li>
-            <li><a href="#">Do your part</a> </li>
-            <li><a href="#">Pewdiepie</a> </li>
-            <li><a href="#">Memes</a> </li>
-        </ul>
-    </nav>
-<!-- 
+    <header>
+        <nav>
+            <ul>
+                <li> <a href="#">Home</a></li>
+                <li><a href="#">Do your part</a> </li>
+                <li><a href="#">About</a> </li>
+                <li><a href="#">Memes</a> </li>
+            </ul>
+        </nav>
+    </header>
+    <!-- 
 <a href="#" id="menu-btn">Menu</a> -->
 
 
     <div class="container">
         <!-- banner image -->
-    <figure>
-        <img src="#">
-    </figure>
+        <div class="banner">
+            <figure>
+                <img src="anotherone.png">
+            </figure>
+        </div>
 
-    <iframe src="https://youcount.github.io/e/#!/PewDiePie" height="100" width="250" frameborder="0"></iframe>
-    <iframe src="https://youcount.github.io/e/#!/tseries" height="100" width="250" frameborder="0"></iframe>
+        <iframe src="https://youcount.github.io/e/#!/PewDiePie" height="100" width="250" frameborder="0"></iframe>
+        <iframe src="https://youcount.github.io/e/#!/tseries" height="100" width="250" frameborder="0"></iframe>
 
 
+
+        <section>
+            <h3>A title for this shit</h3>
+            <p>content of the site?</p>
+        </section>
 
         <section>
             <h3>A title for this shit</h3>
@@ -48,15 +56,10 @@
             <p>content of the site?</p>
         </section>
 
-        <section>
-            <h3>A title for this shit</h3>
-            <p>content of the site?</p>
-        </section>   
-        
         <div class="sidebar">
-        <section>
-            Twitter or something idk
-        </section>
+            <section>
+                Twitter or something idk
+            </section>
         </div>
 
     </div>
