--- a/printer.html
+++ b/printer.html
@@ -28,9 +28,9 @@
                         <div class="nav-wrapper">
                               <ul>
                                     <li class="active"><a href="#">Home</a></li>
-                                    <li><a href="#">Overview</a></li>
-                                    <li><a href="#">Prices</a></li>
-                                    <li><a href="#">Purchase</a></li>
+                                    <li><a href="#">Software</a></li>
+                                    <li><a href="#">About us</a></li>
+                                    <li><a href="#">Contact</a></li>
                               </ul>
                         </div>
                   </nav>
@@ -93,26 +93,6 @@
                         </div>
                   </div>
             </section>
-<!-- 
-            <div class="aboutus">
-                  <section>
-                        <h2>A title</h2>
-                        <p>I dont yet know what will be here</p>
-                  </section>
-
-                  <figure>
-                        <img src="">
-                  </figure>
-            </div>
-
-            <div class="download">
-                  Download the software now
-            </div>
-      </div>
-
-      <footer>
-            @ me boi
-      </footer> -->
 
       <div class="jumbotron-fixed">
             <div class="container">
@@ -123,52 +103,20 @@
             </div>
       </div>
 
-      
-      <section class="section_row_main">
-                  <div class="container">
-                        <div class="main">
-                              <h1>
-                                    We care about your security
-                              </h1>
-                              <p>something about security and how we care and why lmao</p>
-                        </div>
-                        <div class="side">
-                              <figure>
-                                    <img id="home" src="undraw_programmer_imem.png">
-                              </figure>
-                        </div>
+      <section class="review">
+            <div class="container">
+                  <div class="review-content">
+                        <figure>
+                              <img src="60.jpg">
+                        </figure>
+                        <h2>Its worth a while</h2>
+                        <p>Printer security has only started to develop lately bla bla bla pls take care of your printer</p>
                   </div>
-            </section>
+            </div>
+      </section>
 
 
-            <section class="section_row_1">
-                  <div class="container">
-                        <div class="informative" id="firstbox">
-                              <figure class="info">
-                                    <img src="undraw_empty_xct9.png">
-                              </figure>
-                              <h2>Title</h2>
-                              <p>some information about what the fuck ye</p>
-                              <a href="#">Read more</a>
-                        </div>
-                        <div class="informative" id="secondbox">
-                              <figure class="info">
-                                    <img src="undraw_working_remotely_jh40.png">
-                              </figure>
-                              <h2>Contact us</h2>
-                              <p>some information about what the fuck ye</p>
-                              <a href="#">Read more</a>
-                        </div>
-                        <div class="informative" id="thirdbox">
-                              <figure class="info">
-                                    <img src="undraw_photocopy_gj0t.png">
-                              </figure>
-                              <h2>Software Information</h2>
-                              <p>some information about what the fuck ye</p>
-                              <a href="#">Read more</a>
-                        </div>
-                  </div>
-            </section>
+
 </body>
 
 </html>
