lets try not to fuck it up ok
ye boi

--- a/pewds.html
+++ b/pewds.html
@@ -9,7 +9,7 @@
 
     <title>Pewdiepie vs T-series</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="pewds.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/pewds.css" />
 </head>
 
 <body>
@@ -32,7 +32,7 @@
         <!-- banner image -->
         <div class="banner">
             <figure>
-                <img src="anotherone.png">
+                <img src="img/anotherone.png">
             </figure>
         </div>
 
