--- a/printer.html
+++ b/printer.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <title>Minimal Responsive Navigation | HTML & CSS</title>
-      <link rel="stylesheet" href="print.css">
+      <link rel="stylesheet" href="css/print.css">
       <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
 
 </head>
@@ -58,7 +58,7 @@
                         </div>
                         <div class="side">
                               <figure>
-                                    <img id="home" src="undraw_programmer_imem.png">
+                                    <img id="home" src="img/undraw_programmer_imem.png">
                               </figure>
                         </div>
                   </div>
@@ -69,7 +69,7 @@
                   <div class="container">
                         <div class="informative" id="firstbox">
                               <figure class="info">
-                                    <img src="undraw_empty_xct9.png">
+                                    <img src="img/undraw_empty_xct9.png">
                               </figure>
                               <h2>About Us</h2>
                               <p>some information about what the fuck ye</p>
@@ -77,7 +77,7 @@
                         </div>
                         <div class="informative" id="secondbox">
                               <figure class="info">
-                                    <img src="undraw_working_remotely_jh40.png">
+                                    <img src="img/undraw_working_remotely_jh40.png">
                               </figure>
                               <h2>Contact us</h2>
                               <p>some information about what the fuck ye</p>
@@ -85,7 +85,7 @@
                         </div>
                         <div class="informative" id="thirdbox">
                               <figure class="info">
-                                    <img src="undraw_photocopy_gj0t.png">
+                                    <img src="img/undraw_photocopy_gj0t.png">
                               </figure>
                               <h2>Software Information</h2>
                               <p>some information about what the fuck ye</p>
@@ -107,7 +107,7 @@
             <div class="container">
                   <div class="review-content">
                         <figure>
-                              <img src="60.jpg">
+                              <img src="img/60.jpg">
                         </figure>
                         <h2>Its worth a while</h2>
                         <p>Printer security has only started to develop lately bla bla bla pls take care of your printer</p>
