--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
 
     <title>Pewdiepie vs T-series</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="test.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/test.css" />
     <link href="css/screen.css" rel="stylesheet" type="text/css" /> 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript" charset="utf-8" src="js/jquery.tubular.1.0.js"></script>
@@ -19,27 +19,33 @@
 
 <body>
     <!-- navigation -->
-    <header>
-        <nav>
-            <ul>
-                <li> <a href="#">Home</a></li>
-                <li><a href="#">Do your part</a> </li>
-                <li><a href="#">About</a> </li>
-                <li><a href="#">Memes</a> </li>
-            </ul>
-        </nav>
-    </header>
+    <a href="#"class="tubular-mute">
+        <div id="s_btn" class="off_btn"></div>
+    </a>
 
-    <div id="wrapper" class="clearfix">
-        <div id="main">
-                <p id="video-controls" class="black-65">Video controls:<br /><a href="#" class="tubular-play">Play</a> | <a href="#" class="tubular-pause">Pause</a> | <a href="#" class="tubular-volume-up">Volume Up</a> | <a href="#" class="tubular-volume-down">Volume Down</a> | <a href="#" class="tubular-mute">Mute</a></p>
-                <div class="black-50">
-                    <h1>jQuery tubular</h1>
-                    <p>Tubular is a jQuery plugin that lets you set a YouTube video as your page background.  Just attach it to your page wrapper element, set some options, and you're on your way.</p>
-                    <p><code>$(<em>page content wrapper element</em>).tubular(<em>options</em>);</code></p>
-                </div>
-        </div>
-    </div>    
+    <header id="top-head">
+			<div class="inner">
+				<div id="mobile-head">
+					 <div id="nav-toggle">
+						<div>
+							<span></span>
+							<span></span>
+							<span></span>
+						</div>
+					</div>
+					<h1 class="top_logo"><a href="/"><img src="img/unnamed.jpg" alt="Pewdiepie logo" width="100%"></a></h1>
+
+				<nav id="global-nav">
+					<ul>
+						<li><a href="#">HOME</a></li>
+						<li><a href="#">DO YOUR PART</a></li>
+						<li><a href="#">PEWDIEPIE</a></li>
+						<li><a href="#">SOMETHING</a></li>
+                    </ul>
+				</nav>
+			</div>
+		</header>
+
 
     
 </body>
