wrapper is back
shit

--- a/test.html
+++ b/test.html
@@ -46,6 +46,16 @@
 			</div>
 		</header>
 
+    <div id="wrapper" class="clearfix">
+        <div id="main">
+                <p id="video-controls" class="black-65">Video controls:<br /><a href="#" class="tubular-play">Play</a> | <a href="#" class="tubular-pause">Pause</a> | <a href="#" class="tubular-volume-up">Volume Up</a> | <a href="#" class="tubular-volume-down">Volume Down</a> | <a href="#" class="tubular-mute">Mute</a></p>
+                <div class="black-50">
+                    <h1>jQuery tubular</h1>
+                    <p>Tubular is a jQuery plugin that lets you set a YouTube video as your page background.  Just attach it to your page wrapper element, set some options, and you're on your way.</p>
+                    <p><code>$(<em>page content wrapper element</em>).tubular(<em>options</em>);</code></p>
+                </div>
+        </div>
+    </div>    
 
     
 </body>
