--- a/test.html
+++ b/test.html
@@ -9,6 +9,7 @@
 
     <title>Pewdiepie vs T-series</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/normalize.css" rel="stylesheet" type="text/css" /> 
     <link rel="stylesheet" type="text/css" media="screen" href="css/test.css" />
     <link href="css/screen.css" rel="stylesheet" type="text/css" /> 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
